scrollbar and other fixes

--- a/src/index.css
+++ b/src/index.css
@@ -143,3 +143,24 @@
   background: rgba(144, 139, 139, 0.6);
   filter: blur(750px);
 }
+
+/* Width of scrollbar */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* Color of scrollbar and roundness */
+::-webkit-scrollbar-thumb {
+  background-color: #6E87A3;
+  border-radius: 8px;
+}
+
+/* Color of track */
+::-webkit-scrollbar-track {
+  background-color: #2b2b2b; /* Set the color of the track */
+}
+
+/* Color when hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #475A70;
+}
